--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script type="module" src="./renderer.js"></script>
     </div>
     <div id="config">
+        <img id="back" src="back.png"/>
         <div id="configContainer">
             <div id="configPanel">
                 <div class="maxWidth">
