--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
         <div class="center">
             <p>Generating Contact Sheet</p>
             <image id="spinner" src="./spinner.png"></image>
+            <p class="plainText" id="slow">This can take a while for a lot of images</p>
         </div>
     </div>
     <div id="saved">
         <div class="center">
             <p>Saved File to </p>
-            <p id="savedText"></p>
+            <p id="savedText" class="plainText"></p>
             <button id="okayButton">Okay</button>
         </div>
     </div>
