--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <h2>Options</h2>
                     <p>Columns</p>
                     <input type="number" id="columns" placeholder="columns" value="5"/>
+                    <input type="number" id="padding" placeholder="padding" value="1"/>
                     <input type="number" id="size" placeholder="horizontal pixels" value="2000" />
                     <!--</1><input type="number" id="aspect" placeholder="aspect ratio" value="0.66"/>-->
                     <p>Colour</p>
