--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
         <div class="center">
             <p>Saved File to </p>
             <p id="savedText" class="plainText"></p>
-            <button id="okayButton">Okay</button>
+            <div class="buttonContainer">
+                <button id="okayButton">Okay</button>
+                <button id="openFolder">Open Folder</button>
+            </div>
         </div>
     </div>
 </body>
